crash during medialibrary searching

steps to reproduce

  1. switch view to video, make sure there is no video
  2. add folder with videos

observation - crash

stack trace

#0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=140736903779904) at pthread_kill.c:44
#1  __pthread_kill_internal (signo=6, threadid=140736903779904) at pthread_kill.c:80
#2  __GI___pthread_kill (threadid=140736903779904, signo=signo@entry=6) at pthread_kill.c:91
#3  0x00007ffff7da1476 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#4  0x00007ffff7d877b7 in __GI_abort () at abort.c:79
#5  0x00007ffff6c23a31 in  () at /lib/x86_64-linux-gnu/libstdc++.so.6
#6  0x00007ffff6c2f4ec in  () at /lib/x86_64-linux-gnu/libstdc++.so.6
#7  0x00007ffff6c2f557 in  () at /lib/x86_64-linux-gnu/libstdc++.so.6
#8  0x00007ffff6c2f7f9 in  () at /lib/x86_64-linux-gnu/libstdc++.so.6
#9  0x00007ffff43c78d7 in std::__throw_out_of_range_fmt(char const*, ...) () at /home/prince/Qt/5.15.2/gcc_64/lib/libQt5Qml.so.5
#10 0x00007ffff502e21d in std::vector<std::unique_ptr<MLItem, std::default_delete<MLItem> >, std::allocator<std::unique_ptr<MLItem, std::default_delete<MLItem> > > >::_M_range_check(unsigned long) const (__n=<optimized out>, this=<optimized out>) at /usr/include/c++/11/bits/stl_vector.h:1073
#11 std::vector<std::unique_ptr<MLItem, std::default_delete<MLItem> >, std::allocator<std::unique_ptr<MLItem, std::default_delete<MLItem> > > >::at(unsigned long) (__n=<optimized out>, this=<optimized out>) at /usr/include/c++/11/bits/stl_vector.h:1094
#12 MLListCache::get(unsigned long) const (this=<optimized out>, index=24) at ../../vlc/modules/gui/qt/medialibrary/mllistcache.cpp:104
#13 0x00007ffff5016d43 in MLBaseModel::item(int) const (signedidx=24, this=0x7fffd085b520) at /usr/include/c++/11/bits/unique_ptr.h:173
#14 MLBaseModel::item(int) const (signedidx=24, this=0x7fffd085b520) at ../../vlc/modules/gui/qt/medialibrary/mlbasemodel.cpp:484
#15 MLBaseModel::data(QModelIndex const&, int) const (role=259, index=..., this=0x7fffd085b520) at ../../vlc/modules/gui/qt/medialibrary/mlbasemodel.cpp:166
#16 MLBaseModel::getDataAt(QModelIndex const&) (this=0x7fffd085b520, index=...) at ../../vlc/modules/gui/qt/medialibrary/mlbasemodel.cpp:69
#17 0x00007ffff50177ff in MLBaseModel::getDataAt(int) (this=0x7fffd085b520, idx=<optimized out>) at ../../vlc/modules/gui/qt/medialibrary/mlbasemodel.cpp:77
#18 0x00007ffff50ff6d5 in MLBaseModel::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x7fffd085b520, _c=<optimized out>, _id=<optimized out>, _a=0x7fffdd27dde0) at gui/qt/medialibrary/mlbasemodel.moc.cpp:179
#19 0x00007ffff5100303 in MLBaseModel::qt_metacall(QMetaObject::Call, int, void**) (this=0x7fffd085b520, _c=QMetaObject::InvokeMetaMethod, _id=12, _a=0x7fffdd27dde0) at gui/qt/medialibrary/mlbasemodel.moc.cpp:299
#20 0x00007ffff42f7349 in QQmlObjectOrGadget::metacall(QMetaObject::Call, int, void**) const () at /home/prince/Qt/5.15.2/gcc_64/lib/libQt5Qml.so.5
#21 0x00007ffff41de6bd in CallMethod(QQmlObjectOrGadget const&, int, int, int, int*, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) [clone .constprop.335] () at /home/prince/Qt/5.15.2/gcc_64/lib/libQt5Qml.so.5
#22 0x00007ffff41e0095 in CallPrecise(QQmlObjectOrGadget const&, QQmlPropertyData const&, QV4::ExecutionEngine*, QV4::CallData*, QMetaObject::Call) [clone .constprop.332] () at /home/prince/Qt/5.15.2/gcc_64/lib/libQt5Qml.so.5
#23 0x00007ffff41e1227 in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const () at /home/prince/Qt/5.15.2/gcc_64/lib/libQt5Qml.so.5
#24 0x00007ffff420fe1c in QV4::Runtime::CallPropertyLookup::call(QV4::ExecutionEngine*, QV4::Value const&, unsigned int, QV4::Value*, int) () at /home/prince/Qt/5.15.2/gcc_64/lib/libQt5Qml.so.5
#25 0x00007fff4f71d78c in  ()
#26 0x0000000000000000 in  ()