qt: fix out of bound in MLListcache during remove operations

the removed data are after the m_partialIndex in the old model so the partial
index should not be placed after.

fix: #26848